<resources>
    <string name="app_name">RetailExpert</string>
    <string name="title_activity_sales">SalesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_sales">Sales</string>
    <string name="menu_orders">Bills</string>
    <string name="title_activity_serial_port">SerialPortActivity</string>
    <string name="title_COM_USB_UART">USB UART</string>
    <string name="title_COM_BASE_RS232">BASE RS232</string>
    <string name="title_COM_OTG_USB2Serial">OTG USB2Serial</string>
    <string name="description_COM_USB_UART">Normal USB cable, UART port on PC side</string>
    <string name="description_COM_BASE_RS232">typical RJ45 serial cable connect to the RS232 port of the Base</string>
    <string name="description_COM_OTG_USB2Serial">OTG cable + USB2Serial</string>
    <string name="title_activity_printer_ex">PrinterExActivity</string>
    <string name="set_params_title"><![CDATA[Set AID & RID & Keys]]></string>
    <string name="host_address">Host IP Address</string>
    <string name="host_port">Host Port</string>
    <string name="commtimeout">Comm Timeout</string>
    <string name="tek_download">TEK download</string>
    <string name="btn_print_guide">Print Guide</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="paper_receipt">If you want a paper receipt,back to the last page</string>
    <string name="phonenum">Input Phone Num</string>
    <string name="send">Send</string>
    <string name="back_home">Back To Homepage</string>
    <string name="input_amount">Input amount  (USD)</string>
    <string name="rapid_cashier">Cashier</string>
    <string name="sign">Sign in</string>
    <string name="settings">Settings</string>
    <string name="Pay_success">Successed</string>
    <string name="print_rec">Print receipt</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="wait">Processing...</string>
    <string name="insert">Insert card</string>
    <string name="slip">Slip card</string>
    <string name="swing">Tap card</string>
    <string name="nocard">You can also select no card consumption</string>
    <string name="consumcard">Card No.</string>
    <string name="readcard">Read card No.</string>
    <string name="confirmcard">Confirm card No.</string>
    <string name="onlinepass">Input online password:</string>
    <string name="cardno">Card No.：</string>
    <string name="amount">Amount：</string>
    <string name="inputpass">Input password here</string>
    <string name="print">Print</string>
    <string name="reprint">Re-print last receipt</string>
    <string name="consumsucc">Payment successful</string>
    <string name="printing">Receipt printing...</string>
    <string name="refundsucc">Refund success</string>
    <string name="amount1">Amount</string>
    <string name="merchantname">Merchant name	</string>
    <string name="merchantno">Merchant No.</string>
    <string name="terminalno">Terminal No.</string>
    <string name="cardno1">Card      No.</string>
    <string name="sequenceno">Sequence No.</string>
    <string name="date">Date</string>
    <string name="qrconsum">QR code</string>
    <string name="slipinsertswing">Insert/tap/slip card	</string>
    <string name="terminalset">Terminal settings</string>
    <string name="merchantset">Merchant settings</string>
    <string name="stroe">Store</string>
    <string name="operator">Operator</string>
    <string name="inputopno">Input operator no.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="comm_para">Comm parameters</string>
    <string name="aidstorefail">AID store failure:</string>
    <string name="aidparastorefail">AID parameter store failure:</string>
    <string name="rfaidstorefail">RF AID store failure:</string>
    <string name="rfaidparastorefail">RF AID parameter store failure:</string>
    <string name="pkdownloadfail">CAPK download failure</string>
    <string name="pkstorefail">"CAPK store failure:"</string>
    <string name="downloadicparasucc">Download AID parameter success</string>
    <string name="AIDparaload">AID parameter download</string>
    <string name="downrfparasucc">Download RF parameter success</string>
    <string name="rfaiddownload">RF AID download</string>
    <string name="pkdownloadsucc">Download CAPK success</string>
    <string name="pkdownload">"CAPK download"</string>
    <string name="prikeyill">Key null illegal</string>
    <string name="prikeylenwrong">Key length wrong</string>
    <string name="mainkeyveriwrong">Main key verify wrong</string>
    <string name="pinkeyveriwrong">Work key(PIN key)verify wrong</string>
    <string name="mackeyveriwrong">Work key(MAC key)verify wrong</string>
    <string name="magslotencrkeyveriwrong">Mag slot encrypt key verify wrong</string>
    <string name="readywait">Ready, waiting。。。</string>
    <string name="openserialfail">Open serial port failure</string>
    <string name="dataverifail">Data verify failure</string>
    <string name="recdatafail">Receive data failure</string>
    <string name="datalennoteno">Data length not enough</string>
    <string name="notkeydowncommand">Not key download command</string>
    <string name="tekdwonsucc">TEK download success</string>
    <string name="tekdownfail">TEK download failure</string>
    <string name="terserconnfail">Termianl service conn failure</string>
    <string name="ssldwon">SSL download</string>
    <string name="notssldowncommand">Not SSL download command</string>
    <string name="ssldownsucc">SSL download success</string>
    <string name="inputcorrecttime">Input correct timeout num</string>
    <string name="timeoutoverzero">Timeout num must over 0</string>
    <string name="inputcorrecttpdu">Input correct TPDU</string>
    <string name="commparastoresucc">Stored success</string>
    <string name="downkey">Download key</string>
    <string name="inputonlinepass">Input online password</string>
    <string name="inputofflinepass">Input offline password</string>
    <string name="wrongPin">Wrong PIN</string>
    <string name="processwait">Processing，waiting</string>
    <string name="useyourcard">Use your card</string>
    <string name="cardnoincorr">Card No. incorrect，double check!</string>
    <string name="recheckcardno">Recheck the card No.</string>
    <string name="signyourname">Signature</string>
    <string name="readtimeout">Read card timeout</string>
    <string name="swipefailretry">Swipe card failure,retry</string>
    <string name="swipefailreswipe">Swipe card failure, re-swipe</string>
    <string name="readicfail">Read ic card failure</string>
    <string name="readicwrongswipemag">Read ic card error，swipe mag card!</string>
    <string name="chooseapp">Choose APP：</string>
    <string name="communication">Communication</string>
    <string name="reinputpass">Re-input password</string>
    <string name="connhostfail">Connect host failure</string>
    <string name="senddatafail">Send data failure</string>
    <string name="recedatafail">Received data null</string>
    <string name="checknetwork">Check network is available</string>
    <string name="setipandport">Set ip and port</string>
    <string name="packdata">Pack the data</string>
    <string name="packconvertwrong">Data package convert wrong</string>
    <string name="packveriwrongmac">Data package verify wrong，MAC verify wrong!</string>
    <string name="packveriwrongmsgid">Data package verify wrong，MSGID not match!</string>
    <string name="packveriwrongretrade">Data package verify wrong，re-trade!</string>
    <string name="tradefail">Trade failure</string>
    <string name="hostreterrorcode">Error code host returned:</string>
    <string name="hostretseqnotmatch">Sequence id host returned is not match!</string>
    <string name="hostretternotmatch">Terminal id host returned is not match!</string>
    <string name="bankoffdatafail">Bank off,get data failure</string>
    <string name="conv8583packwrong">8583package wrong</string>
    <string name="nolastrecord">No last record</string>
    <string name="reprint1">Re-print</string>
    <string name="reprintsucc">Re-print success</string>
    <string name="printsucctakereceipt">Print success，take the receipt！</string>
    <string name="confirmprint2nd">Confirm to print 2nd copy</string>
    <string name="confirmprint3rd">Confirm to print 3rd copy</string>
    <string name="receiptprinting">Receipt printing...</string>
    <string name="printsucc">Print succeed</string>
    <string name="outofpaper">Out of paper</string>
    <string name="hwerror">HW error</string>
    <string name="overheat">Overheat</string>
    <string name="lowvoltage">Low voltage protection</string>
    <string name="motorerror">Motor error</string>
    <string name="busy">Printer busy</string>
    <string name="printerrorche">Print error, double check</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="qrpurchase">QR purchase</string>
    <string name="foucustheqr">Focus to the QR code</string>
    <string name="scantimeout">Scan timeout</string>
    <string name="usercancel">User cancel</string>
    <string name="bank_card">Card Purchase</string>
    <string name="bank_qr">QR Purchase</string>
    <string name="clear">Clear</string>
    <string name="merchantNmae">Verifone Demo</string>
    <string name="prn_title">Verifone DEMO Receipt</string>
    <string name="prn_merchantNmae">"MERCHANT NAME"</string>
    <string name="prn_merchantNo">"MERCHANT NO."</string>
    <string name="prn_merchantCopy">"MERCHANT COPY"</string>
    <string name="prn_cardholderCopy">"CARDHOLDER COPY"</string>
    <string name="prn_bankCopy">"BANK COPY"</string>
    <string name="prn_terminalNo">"TERMINAL NO.:"</string>
    <string name="prn_operatorNo">"OPERATOR NO.:"</string>
    <string name="prn_issue">"ISSUE:"</string>
    <string name="prn_cardNo_CSN">"CARD NO.:           CSN:"</string>
    <string name="prn_cardNo">"CARD NO."</string>
    <string name="prn_expDate">"EXP. DATE:"</string>
    <string name="prn_transType">"TRANS TYPE:"</string>
    <string name="prn_batchNo">"BATCH NO."</string>
    <string name="prn_trackNo">"TRACE NO."</string>
    <string name="prn_authNo">"AUTH NO."</string>
    <string name="prn_refNo">"REF NO."</string>
    <string name="prn_dateTime">"DATE/TIME:"</string>
    <string name="prn_amount">"AMOUNT:"</string>
    <string name="prn_currency">"USD "</string>
    <string name="prn_reference">"REFERENCE"</string>
    <string name="prn_tc">"TC:"</string>
    <string name="prn_reprint">"--REPRINT--"</string>
    <string name="prn_signature">"CARDHOLDER SIGNATURE"</string>
    <string name="prn_barcode">"123456789012345"</string>
    <string name="prn_qrcode1">"www.verifone.com"</string>
    <string name="prn_qrcode2">"https://www.google.com/search?q=verifone"</string>
    <string name="prn_comment1">"I ACKNOWLEDGE SATISFACTORY RECEIPT OF"</string>
    <string name="prn_comment2">"RELATIVE GOODS/SERVICE"</string>
    <string name="prn_comment3">""</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_6">6</string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="number_9">9</string>
    <string name="number_8">8</string>
    <string name="number_7">7</string>
    <string name="number_point">.</string>
    <string name="number_0">0</string>
    <string name="ce_pay_dialog">ce</string>
</resources>