<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".phoneMode.activity.FinancialReportsActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView129"
      app:layout_constraintVertical_bias="1.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_input_data"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed">

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/et_input_data"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="8dp"
          android:clickable="false"
          android:focusable="false"
          android:focusableInTouchMode="false"

          android:gravity="center_horizontal|center_vertical"
          android:lines="1"
          android:maxLength="6"
          android:maxLines="1"
          android:textColor="@android:color/black"
          android:textSize="30sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/calculator_backspace"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageButton
          android:id="@+id/calculator_backspace"
          android:layout_width="50dp"
          android:layout_height="0dp"
          android:background="@android:color/transparent"
          android:src="@drawable/ic_backspace_black_24dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok_cashin"
        style="@style/Widget.MaterialComponents.GreenButtonCornersRound"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="Insert"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_1"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_1"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_0"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_0"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ok_cashin"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_point"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_point"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_point"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ok_cashin"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_clear"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_clear"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/ce_pay_dialog"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ok_cashin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add_point"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_4"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_4"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_7"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"

        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_7"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/csl_input_data"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_2"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_2"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_point"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_3"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_5"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_5"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_6"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_8"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"

        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_8"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_cashin_9"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_7"
        app:layout_constraintTop_toBottomOf="@+id/csl_input_data"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_3"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_3"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_6"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_6"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_cashin_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cashin_9"
        style="@style/Widget.MaterialComponents.CustomButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"

        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:insetTop="1dp"
        android:insetBottom="1dp"
        android:text="@string/number_9"
        android:textColor="#202020"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cashin_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cashin_8"
        app:layout_constraintTop_toBottomOf="@+id/csl_input_data"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_InserMoney"
      style="@style/Widget.MaterialComponents.CustomButtonFinRep"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/round_container"
      android:drawableTop="@drawable/insert_48"
      android:gravity="center"
      android:singleLine="true"
      android:text="Insert"
      android:textAllCaps="false"
      android:textColor="@color/black"

      app:layout_constraintEnd_toStartOf="@+id/btn_WithdrawMoney"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_bar"
      app:layout_constraintVertical_chainStyle="packed" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_WithdrawMoney"
      style="@style/Widget.MaterialComponents.CustomButtonFinRep"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/round_container"
      android:drawableTop="@drawable/withdraw_48"
      android:gravity="center"
      android:singleLine="true"
      android:text="Withdraw"
      android:textAllCaps="false"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:backgroundTint="@color/mtrl_btn_selector_whites"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn_InserMoney"
      app:layout_constraintTop_toBottomOf="@+id/app_bar"
      app:layout_constraintVertical_chainStyle="packed" />

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/app_bar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:elevation="3dp"
      android:theme="@style/Theme.MyRetail.AppBarOverlay"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFinReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:popupTheme="@style/Theme.MyRetail.PopupOverlay"
        app:subtitleTextColor="@color/black"
        app:titleTextColor="@color/black" />

  </com.google.android.material.appbar.AppBarLayout>

  <TextView
      android:id="@+id/textView124"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="Atentie!"
      android:textColor="@color/red"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_InserMoney" />

  <TextView
      android:id="@+id/textView129"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="12dp"
      android:text="Sumele de serviciu reprezintă sumele de bani utilizate pentru plata restului către client, puse la dispoziţia operatorului aparatului de marcat electronic fiscal la începutul fiecărei zile de lucru. Acestea se regăsesc în soldul contului de casă şi, de asemenea, în soldul de la sfârşitul zilei de lucru."
      android:textAlignment="center"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView124" />
</androidx.constraintlayout.widget.ConstraintLayout>